--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <version>5.15.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-jms &ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>org.springframework</groupId>-->
@@ -117,6 +122,12 @@
             <!--<version>5.15.6</version>-->
         <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.0.4.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
@@ -125,6 +136,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
                 <!--<configuration>-->
                     <!--<jvmArguments>-->
                         <!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005-->
