--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 
 #server.port=8443
 #server.ssl.key-store=.keystore
-#server.ssl.key-store-password=yang962008
+#server.ssl.key-store-password=
 #server.ssl.key-store-type=JKS
 #server.ssl.key-alias=tomcat
 #spring.profiles.active=dev
@@ -20,10 +20,11 @@ spring.data.rest.base-path=/api
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username=root
-spring.datasource.password=yang962008
+spring.datasource.password=
 
 logging.level.org.springframework.security=INFO
 
+#关闭模版引擎的缓存
 spring.thymeleaf.cache=false
 
 spring.jpa.show-sql=true
@@ -35,4 +36,8 @@ spring.activemq.broker-url=tcp://localhost:61616
 #spring.data.mongodb.database=test
 #spring.data.mongodb.uri=mongodb://localhost/test
 #spring.data.mongodb.username=root
-#spring.data.mongodb.password=yang962008
+#spring.data.mongodb.password=
+
+
+
+
